--- a/frontend/views/index.edge
+++ b/frontend/views/index.edge
@@ -3,7 +3,7 @@
 
 @section('body')
   <container class="main-cont">
-    @!component('components/customer-info')
-    @!component('components/cart-info')
+    <a href="/bacon">Bacon page</a>
+    <a href="/checkout">Checkout page</a>
   </container>
 @end
