--- a/frontend/assets/css/app.css
+++ b/frontend/assets/css/app.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 
-html, body {
+/* html, body {
   background-color: #F7F8FA;
   font-family: 'Poppins', sans-serif;
   height: 100vh;
   color: #46444c;
   position: relative;
-}
+} */
 
 body:before {
   content: '';
@@ -28,15 +28,14 @@ a {
   text-decoration: none;
 }
 
-/* main {
-  max-width: 620px;
+main {
+  max-width: 1024px;
   margin: auto;
-  height: 100vh;
   padding: 0 30px;
   align-items: center;
   display: flex;
   justify-content: center;
-} */
+}
 
 .title {
   font-size: 50px;
