--- a/frontend/assets/css/checkout.css
+++ b/frontend/assets/css/checkout.css
@@ -20,7 +20,7 @@ main {
 }
 
 .details-cont {
-  margin-left: 3.5rem;
+  margin-left: 2em;
 }
 
 #checkout-customer-info-cont {
@@ -38,11 +38,11 @@ main {
 }
 
 .checkout-detail-heading {
-  margin-top: 2rem;
   color: #000000;
   font-weight: 900;
-  padding: 20px;
+  padding-bottom: 10px;
   font-size: 13px;
+  margin-bottom: 10px;
 }
 
 .checkout-detail-heading .heading-circle {
@@ -62,6 +62,7 @@ main {
       grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 0px 0px;
   max-width: 564px;
+  margin-bottom: 1rem;
 }
 
 #checkout-payment-info-cont {
@@ -82,11 +83,12 @@ main {
       grid-template-rows: 1fr 1fr;
   background-color: #FFFFFF;
   border-radius: 5px;
-  padding: 10px 5px;
-  margin: 10px 5px;
+  padding: 0.4rem 10px;
+  margin: 0px 5px;
+  margin-bottom: 20px;
   height: 40px;
-  -webkit-box-shadow: 0px 3px #dddddd;
-          box-shadow: 0px 3px #dddddd;
+  -webkit-box-shadow: 0px 2px #dddddd;
+          box-shadow: 0px 2px #dddddd;
 }
 
 .input-field-wrapper .heading-text {
@@ -142,15 +144,19 @@ main {
 }
 
 #checkout-purchase-btn {
-  margin-top: 40px;
+  margin-top: 20px;
   border: none;
   border-radius: 5px;
   color: #FFFFFF;
   background-color: #6bd500;
-  -webkit-box-shadow: 0px 3px #dddddd;
-          box-shadow: 0px 3px #dddddd;
+  -webkit-box-shadow: 0px 2px #dddddd;
+          box-shadow: 0px 2px #dddddd;
   height: 50px;
   font-weight: bolder;
+}
+
+#checkout-purchase-btn::hover {
+  cursor: pointer;
 }
 
 .credit-card {
@@ -158,5 +164,60 @@ main {
   background-size: 40px;
   background-color: #FFFFFF;
   background-position-x: 98%;
+}
+
+#checkout-cart-prices-cont {
+  width: 300px;
+  padding: 5px;
+  margin-left: 10px;
+  margin-top: 35px;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 2px #dddddd;
+          box-shadow: 0px 2px #dddddd;
+}
+
+#checkout-cart-prices-cont .checkout-detail-heading {
+  margin: 10px;
+  padding: 0px;
+  font-size: 14px;
+}
+
+#checkout-cart-prices-cont #checkout-cart-prices {
+  border-radius: 5px;
+  border-style: dashed;
+  border-width: 1px;
+  background-color: #FFFFFF;
+  border-color: #dddddd;
+  padding: 10px;
+  padding-bottom: 40px;
+}
+
+#checkout-cart-prices-cont .checkout-detail-items {
+  padding-bottom: 10px;
+  border-bottom: 2px dashed #dddddd;
+}
+
+.checkout-detail-wrapper {
+  margin: 10px;
+}
+
+.checkout-detail-wrapper span {
+  font-size: 12px;
+  font-weight: 500;
+}
+
+.checkout-detail-wrapper .checkout-detail-price {
+  float: right;
+}
+
+.checkout-detail-wrapper .checkout-detail-name-total {
+  font-weight: bolder;
+}
+
+.checkout-detail-wrapper .checkout-detail-price-total {
+  float: right;
+  font-weight: bolder;
+  font-size: 24px;
 }
 /*# sourceMappingURL=checkout.css.map */
