--- a/frontend/assets/css/checkout.scss
+++ b/frontend/assets/css/checkout.scss
@@ -1,6 +1,7 @@
 //Imports
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
 //Vars
 $dropShadow: #dddddd;
 $headingBold: #000000;
@@ -25,7 +26,7 @@ main{
 }
 
 .details-cont{
-    margin-left: 3.5rem;
+    margin-left: 2em;
 }
 
 #checkout-customer-info-cont{
@@ -38,11 +39,11 @@ main{
 }
 
 .checkout-detail-heading {
-    margin-top: 2rem;
     color: $headingBold;
     font-weight: 900;
-    padding: 20px;
+    padding-bottom: 10px;
     font-size: 13px;
+    margin-bottom: 10px;
 
     .heading-circle {
         background: $headingBold;
@@ -59,6 +60,7 @@ main{
     grid-template-rows: 1fr 1fr 1fr 1fr; 
     gap: 0px 0px; 
     max-width: 564px;
+    margin-bottom: 1rem;
 }
 
 #checkout-payment-info-cont{
@@ -74,10 +76,11 @@ main{
     grid-template-rows: 1fr 1fr;
     background-color: $white;
     border-radius: 5px;
-    padding: 10px 5px;
-    margin: 10px 5px;
+    padding: 0.4rem 10px;
+    margin: 0px 5px;
+    margin-bottom: 20px;
     height: 40px;
-    box-shadow: 0px 3px $dropShadow;
+    box-shadow: 0px 2px $dropShadow;
     .heading-text {
         color: $heading;
         font-size: 13px;
@@ -124,14 +127,17 @@ main{
 }
 
 #checkout-purchase-btn{
-    margin-top: 40px;
+    margin-top: 20px;
     border: none;
     border-radius: 5px;
     color: $white;
     background-color: $green;
-    box-shadow: 0px 3px $dropShadow;
+    box-shadow: 0px 2px $dropShadow;
     height: 50px;
     font-weight: bolder;
+    &::hover{
+        cursor:pointer
+    }
 }
 
 .credit-card{
@@ -140,6 +146,56 @@ main{
     background-color: $white;
     background-position-x: 98%;
 }
+#checkout-cart-prices-cont{
+    width: 300px;
+    padding: 5px;
+    margin-left: 10px;
+    margin-top: 35px;
+    background-color: $white;
+    border-radius: 5px;
+    box-shadow: 0px 2px $dropShadow;
+    .checkout-detail-heading{
+        margin: 10px;
+        padding: 0px;
+        font-size: 14px;
+    }
+    #checkout-cart-prices{
+        border-radius: 5px;
+        border-style: dashed;
+        border-width: 1px;
+        background-color: $white;
+        border-color: $dropShadow;
+        padding: 10px;
+        padding-bottom: 40px;
+    }
+    .checkout-detail-items{
+        padding-bottom: 10px;
+        border-bottom: 2px dashed $dropShadow;
+    }
+}
+.checkout-detail-wrapper{
+    margin: 10px;
+    span{
+        font-size: 12px;
+        font-weight: 500;
+    }
+    
+    .checkout-detail-price{
+        float: right
+    }
+
+    .checkout-detail-name-total{
+        font-weight: bolder;
+    }
+
+    .checkout-detail-price-total{
+        float: right;
+        font-weight: bolder;
+        font-size: 24px;
+    }
+}
+
+
 
 
 
