--- a/frontend/views/checkout.edge
+++ b/frontend/views/checkout.edge
@@ -2,6 +2,7 @@
 @set('title', 'Checkout')
 
 @section('body')
+  <div id="errors"></div>
   <container class="main-cont">
     @!component('components/customer-info')
     <section id="checkout-cart-info" class="main-section">
