--- a/frontend/assets/css/checkout.scss
+++ b/frontend/assets/css/checkout.scss
@@ -10,12 +10,15 @@ $heading: #323e3e;
 $background: #f2f2f2;
 $white: #FFFFFF;
 $green: #6bd500;
+$error: #ff8888;
+$inputError: #6fbeff;
 
 //css
-body {
+body{
     font-family: 'Roboto', sans-serif;
     background-color: $background;
 }
+
 main{
     padding: 20px;
 }
@@ -30,7 +33,7 @@ main{
 }
 
 #checkout-customer-info-cont{
-    width: 563px;
+    max-width: 563px;
 }
 
 .main-cont{
@@ -135,7 +138,7 @@ main{
     box-shadow: 0px 2px $dropShadow;
     height: 50px;
     font-weight: bolder;
-    &::hover{
+    &:hover{
         cursor:pointer
     }
 }
@@ -149,6 +152,7 @@ main{
 #checkout-cart-prices-cont{
     width: 300px;
     padding: 5px;
+    margin-bottom: 40px;
     margin-left: 10px;
     margin-top: 35px;
     background-color: $white;
@@ -194,6 +198,16 @@ main{
         font-size: 24px;
     }
 }
+
+.null-error{
+    box-shadow: inset 0px 0px 0px 2px $error;
+    div{
+        font-size: 0.75rem;
+        margin-top: 1rem;
+        color: $error;
+    }
+}
+
 
 
 
