added a tiny bit of css to the index page

--- a/frontend/views/components/customer-info.edge
+++ b/frontend/views/components/customer-info.edge
@@ -335,7 +335,7 @@
         }
     }
 
-    expDate.addEventListener("keydown", limitInput);
+    expDate.addEventListener("keydown", limitInput)
 
 
     form.addEventListener("submit", (e) => {
