--- a/frontend/views/index.edge
+++ b/frontend/views/index.edge
@@ -2,6 +2,18 @@
 @set('title', 'Checkout')
 
 @section('body')
+  <style>
+    .main-cont{
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      align-items: center;
+    }
+
+    a{
+      margin: 20px;
+    }
+  </style>
   <container class="main-cont">
     <a href="/bacon">Bacon page</a>
     <a href="/checkout">Checkout page</a>
